@@ -2,71 +2,59 @@ package ch.fortylove.persistence.service;
 
 import ch.fortylove.SpringTest;
 import ch.fortylove.persistence.entity.PlayerStatus;
-import ch.fortylove.persistence.entity.Privilege;
 import ch.fortylove.persistence.entity.Role;
 import ch.fortylove.persistence.entity.User;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Arrays;
+import javax.annotation.Nonnull;
 import java.util.List;
 import java.util.Optional;
 
 @SpringTest
-class TestUserServiceImpl {
-
-    @Autowired private PrivilegeService privilegeService;
-    @Autowired private RoleService roleService;
-    @Autowired private PlayerStatusService playerStatusService;
+class TestUserServiceImpl extends ServiceTest {
 
     @Autowired private UserService testee;
 
-    @Test
-    public void testCreate() {
-        final Privilege privilege1 = privilegeService.create(new Privilege("privilegeName1"));
-        final Privilege privilege2 = privilegeService.create(new Privilege("privilegeName2"));
-        final Role role1 = roleService.create(new Role("roleName1", List.of(privilege1)));
-        final Role role2 = roleService.create(new Role("roleName2", List.of(privilege2)));
-        final PlayerStatus playerStatus = playerStatusService.create(new PlayerStatus("aktiv", 1, 1));
-        final User createdUser = testee.create(new User("firstName", "lastName", "email@fortylove.ch", "password", true, Arrays.asList(role1, role2), playerStatus));
+    @Nonnull private Role role;
+    @Nonnull private PlayerStatus playerStatus;
 
-        Assertions.assertEquals(1, testee.findAll().size());
-        Assertions.assertEquals(createdUser, testee.findAll().get(0));
-        Assertions.assertTrue(createdUser.getRoles().contains(role1));
-        Assertions.assertTrue(createdUser.getRoles().contains(role2));
+    @BeforeEach
+    void setUp() {
+        role = getTestDataFactory().getRoleDataFactory().getDefault();
+        playerStatus = getTestDataFactory().getPlayerStatusDataFactory().getDefault();
     }
 
+    @Test
+    public void testCreate() {
+        final User createdUser = testee.create(new User("firstName", "lastName", "email@fortylove.ch", "password", true, List.of(role), playerStatus));
+
+        final List<User> foundUser = testee.findAll();
+        Assertions.assertEquals(1, foundUser.size());
+        Assertions.assertEquals(createdUser, foundUser.get(0));
+    }
 
     @Test
     public void testFindByEmail_notExists() {
-        final Privilege privilege1 = privilegeService.create(new Privilege("privilegeName1"));
-        final Privilege privilege2 = privilegeService.create(new Privilege("privilegeName2"));
-        final Role role1 = roleService.create(new Role("roleName1", List.of(privilege1)));
-        final Role role2 = roleService.create(new Role("roleName2", List.of(privilege2)));
-        final PlayerStatus playerStatus = playerStatusService.create(new PlayerStatus("aktiv", 1, 1));
-        testee.create(new User("firstName1", "lastName1", "email1@fortylove.ch", "password1", true, Arrays.asList(role1, role2), playerStatus));
-        testee.create(new User("firstName3", "lastName3", "email3@fortylove.ch", "password3", true, Arrays.asList(role1, role2), playerStatus));
+        testee.create(new User("firstName1", "lastName1", "email1@fortylove.ch", "password1", true, List.of(role), playerStatus));
+        testee.create(new User("firstName3", "lastName3", "email3@fortylove.ch", "password3", true, List.of(role), playerStatus));
 
-        final Optional<User> user = testee.findByEmail("email2");
+        final Optional<User> foundUser = testee.findByEmail("email2@fortylove.ch");
 
-        Assertions.assertTrue(user.isEmpty());
+        Assertions.assertTrue(foundUser.isEmpty());
     }
 
     @Test
     public void testFindByEmail_exists() {
-        final Privilege privilege1 = privilegeService.create(new Privilege("privilegeName1"));
-        final Privilege privilege2 = privilegeService.create(new Privilege("privilegeName2"));
-        final Role role1 = roleService.create(new Role("roleName1", List.of(privilege1)));
-        final Role role2 = roleService.create(new Role("roleName2", List.of(privilege2)));
-        final PlayerStatus playerStatus = playerStatusService.create(new PlayerStatus("aktiv", 1, 1));
-        testee.create(new User("firstName1", "lastName1", "email1@fortylove.ch", "password1", true, Arrays.asList(role1, role2), playerStatus));
-        final User user2 = testee.create(new User("firstName2", "lastName2", "email2@fortylove.ch", "password2", true, Arrays.asList(role1, role2), playerStatus));
-        testee.create(new User("firstName3", "lastName3", "email3@fortylove.ch", "password3", true, Arrays.asList(role1, role2), playerStatus));
+        testee.create(new User("firstName1", "lastName1", "email1@fortylove.ch", "password1", true, List.of(role), playerStatus));
+        final User createdUser = testee.create(new User("firstName2", "lastName2", "email2@fortylove.ch", "password2", true, List.of(role), playerStatus));
+        testee.create(new User("firstName3", "lastName3", "email3@fortylove.ch", "password3", true, List.of(role), playerStatus));
 
-        final Optional<User> user = testee.findByEmail("email2@fortylove.ch");
+        final Optional<User> foundUser = testee.findByEmail("email2@fortylove.ch");
 
-        Assertions.assertTrue(user.isPresent());
-        Assertions.assertEquals(user2, user.get());
+        Assertions.assertTrue(foundUser.isPresent());
+        Assertions.assertEquals(createdUser, foundUser.get());
     }
 }
